bug fix: inner-border text now visible with proper line-height

--- a/docs/_sass/partials/wedding/book.scss
+++ b/docs/_sass/partials/wedding/book.scss
@@ -257,6 +257,7 @@ $height: 80vh;
         font-family: MyFirstCrush, sans-serif;
         font-size: medium;
         font-weight: 700;
+        line-height: 2vh;
     }
 
     .inner-border__text::before,
